# time

./: .gitignore  LICENSE  README.md  base.py  datasets.py  diff.py  exp_real.py  exp_synth.py  init.sh  learn.py  plot_const.py  plot_family.py  plot_hazard.py  plot_post.py  pydiff.py  real_exp.py  requirements.txt  run_real.sh  run_synthetic.sh  setup.sh  setup_ext.sh  sim.py  simplex_projection.py  test_diff.py  test_full.py  test_samp.py  util.py
.circleci/: config.yml
cpp/: CMakeLists.txt  diff.cpp  profile.sh  tdiff.cpp
datasets/: __init__.py  comet_genes.py  core.py
datasets/comet/: comet_gbm_genes.txt
datasets/hazard/: gbm.csv
datasets/misc/: colorectal49.txt
datasets/synth/: synth2_0.pcl  synth5_0.pcl
datasets/tcga/: tcga_blca_cna.txt  tcga_blca_matrix.txt  tcga_blca_mut.txt  tcga_coadread_cna.txt  tcga_coadread_matrix.txt  tcga_coadread_mut.txt  tcga_coadread_subtypes.txt  tcga_gbm_cna.txt  tcga_gbm_matrix.txt  tcga_gbm_mut.txt  tcga_gbmmed_cna.txt  tcga_gbmmed_mut.txt  tcga_gbmsmall_cna.txt  tcga_gbmsmall_mut.txt  tcga_path_cna.txt  tcga_path_matrix.txt  tcga_path_mut.txt
tests/: test_diff.py
